--- a/cis5520-classes.cabal
+++ b/cis5520-classes.cabal
@@ -4,7 +4,7 @@ version:             0.1.0.0
 synopsis:            Class materials from CIS 5520, UPenn
 description:         Type classes
 license-file:        LICENSE
-maintainer:          sweirich@cis.upenn.edu
+maintainer:          sweirich@seas.upenn.edu
 build-type:          Simple
 extra-source-files:  CHANGELOG.md
 
@@ -14,53 +14,7 @@ library
                      , MonoidFoldable
   -- other-modules:
   build-depends:       base >= 4.15, HUnit >= 1.6, filepath >= 1.4
-  default-language:    Haskell2010
+  default-language:    GHC2021
   ghc-options:         -Wno-type-defaults -Wincomplete-patterns
- -- these extensions are enabled for GHC2021, turning them on now for 
-  -- future compatibility
   default-extensions:
-    BangPatterns
-    BinaryLiterals
-    ConstrainedClassMethods
-    ConstraintKinds
-    DeriveDataTypeable
-    DeriveFoldable
-    DeriveFunctor
-    DeriveGeneric
-    DeriveLift
-    DeriveTraversable
-    DoAndIfThenElse
-    EmptyCase
-    EmptyDataDecls
-    EmptyDataDeriving
-    ExistentialQuantification
-    ExplicitForAll
-    FlexibleContexts
-    FlexibleInstances
-    ForeignFunctionInterface
-    GADTSyntax
-    GeneralisedNewtypeDeriving
-    HexFloatLiterals
-    ImplicitPrelude
-    ImportQualifiedPost
-    InstanceSigs
-    KindSignatures
-    MonomorphismRestriction
-    MultiParamTypeClasses
-    NamedFieldPuns
-    NamedWildCards
-    NumericUnderscores
-    PatternGuards
-    PolyKinds
-    PostfixOperators
-    RankNTypes
-    RelaxedPolyRec
-    ScopedTypeVariables
-    StandaloneDeriving
-    StandaloneKindSignatures
-    StarIsType
-    TraditionalRecordSyntax
-    TupleSections
-    TypeApplications
-    TypeOperators
-    TypeSynonymInstances
+    
